# PROJET_7

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/: routes.py  schemas.py
app/clients/: openagenda_client.py  opendatasoft_client.py
app/ingestion/: build_dataset.py  fetch_events.py  normalize_events.py  quality.py
app/rag/: answer.py  chunking.py  embeddings.py  llm.py  retriever.py  temporal.py  vector_store.py
app/services/: interaction_log.py  qa_service.py  rebuild_service.py
app/utils/: io.py  logging.py
docs/: auto_evaluation.md  rapport_technique.md
docs/rapport_technique/: .gitkeep  rapport_technique.md
docs/soutenance/: .gitkeep  demo_docker.md  plan_slides.md  presentation_puls_events.pptx
scripts/: api_test.py  check_environment.py  evaluate_rag.py  rebuild_index.py  run_api.py  run_pytest.py
tests/fixtures/: qa_dataset.json  sample_events.json
tests/integration/: test_api.py  test_real_qa_service.py  test_real_vector_store.py  test_rebuild_index.py
tests/unit/: test_answer.py  test_build_dataset.py  test_check_environment.py  test_chunking.py  test_evaluate_rag.py  test_fetch_events.py  test_interaction_log.py  test_io.py  test_normalize_events.py  test_opendatasoft_client.py  test_qa_service.py  test_quality.py  test_temporal.py  test_vector_store.py
ui/: streamlit_app.py
