[project]
name = "projet-7"
version = "0.1.0"
description = "POC RAG pour des recommandations d'evenements culturels a partir d'OpenAgenda."
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "requests",
    "pandas",
    "langchain",
    "langchain-community",
    "faiss-cpu",
    "mistralai<2",
    "ragas",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "httpx",
    "ruff",
]
